--- a/about-us.html
+++ b/about-us.html
@@ -40,7 +40,7 @@
                                     <a tabindex="-1" href="index.html#segment" class="dropdown-item">Insurance</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Loans</a>
+                                    <a tabindex="-1" href="#segment" class="dropdown-item">Loans</a>
                                 </li>
                                 <li>
                                     <a tabindex="-1" href="index.html#segment" class="dropdown-item">Income Tax</a>
