--- a/disclaimer.html
+++ b/disclaimer.html
@@ -28,25 +28,25 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Solutions</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item test">Product List<span class="caret"></span></a>
+                            <a class="dropdown-item test">Product<span class="caret"></span></a>
                             <ul class="dropdown-menu dropdown-submenu">
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Shares & Stocks</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Shares & Stocks</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Mutual Fund</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Mutual Fund</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Insurance</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Insurance</a>
                                 </li>
                                 <li>
                                     <a tabindex="-1" href="#segment" class="dropdown-item">Loans</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Income Tax</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Income Tax</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Real Estate</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Real Estate</a>
                                 </li>
                             </ul>                             
                             <a class="dropdown-item test" href="#">Other Services <span class="caret"></span></a>
@@ -105,98 +105,94 @@
         </div>
         <div class="section-body">
             <div class="container">
-                <style type="text/css">
-    p.p1 {
-        margin: 0.0px 0.0px 13.5px 0.0px;
-        text-align: center;
-        font: 27.0px Helvetica;
-        color: #3f6caf;
-        background-color: #ffffff
-    }
+                <style type="text/css">p.p1 {
+    margin: 0.0px 0.0px 13.5px 0.0px;
+    text-align: center;
+    font: 27.0px Helvetica;
+    color: #3f6caf;
+    background-color: #ffffff;
+}
 
-    p.p2 {
-        margin: 0.0px 0.0px 15.0px 0.0px;
-        font: 10.5px Helvetica;
-        color: #535353;
-        background-color: #ffffff;
-        min-height: 12.0px
-    }
+p.p2 {
+    margin: 0.0px 0.0px 15.0px 0.0px;
+    font: 10.5px Helvetica;
+    color: #535353;
+    background-color: #ffffff;
+    min-height: 12.0px;
+}
 
-    p.p3 {
-        margin: 0.0px 0.0px 15.0px 0.0px;
-        font: 10.5px Helvetica;
-        color: #535353;
-        background-color: #ffffff
-    }
+p.p3 {
+    margin: 0.0px 0.0px 15.0px 0.0px;
+    font: 10.5px Helvetica;
+    color: #535353;
+    background-color: #ffffff;
+}
 
-    p.p4 {
-        margin: 0.0px 0.0px 13.5px 0.0px;
-        font: 10.5px 'Times New Roman';
-        color: #535353;
-        background-color: #ffffff
-    }
+p.p4 {
+    margin: 0.0px 0.0px 13.5px 0.0px;
+    font: 10.5px 'Times New Roman';
+    color: #535353;
+    background-color: #ffffff;
+}
 
-    li.li5 {
-        margin: 0.0px 0.0px 5.0px 0.0px;
-        font: 10.5px Helvetica;
-        color: #535353
-    }
+li.li5 {
+    margin: 0.0px 0.0px 5.0px 0.0px;
+    font: 10.5px Helvetica;
+    color: #535353;
+}
 
-    span.s1 {
-        text-decoration: underline
-    }
+span.s1 {
+    text-decoration: underline;
+}
 
-    span.s2 {
-        font: 10.0px Symbol
-    }
+span.s2 {
+    font: 10.0px Symbol;
+}
 
-    span.s3 {
-        background-color: #ffffff
-    }
+span.s3 {
+    background-color: #ffffff;
+}
 
-    ul.ul1 {
-        list-style-type: disc
-    }
-</style>
-                <style type="text/css">
-    p.p1 {
-        margin: 0.0px 0.0px 13.5px 0.0px;
-        font: 10.5px Helvetica;
-        color: #535353;
-        background-color: #ffffff
-    }
+ul.ul1 {
+    list-style-type: disc;
+}</style>
+                <style type="text/css">p.p1 {
+    margin: 0.0px 0.0px 13.5px 0.0px;
+    font: 10.5px Helvetica;
+    color: #535353;
+    background-color: #ffffff;
+}
 
-    p.p2 {
-        margin: 0.0px 0.0px 15.0px 0.0px;
-        font: 10.5px Helvetica;
-        color: #535353;
-        background-color: #ffffff
-    }
+p.p2 {
+    margin: 0.0px 0.0px 15.0px 0.0px;
+    font: 10.5px Helvetica;
+    color: #535353;
+    background-color: #ffffff;
+}
 
-    p.p3 {
-        margin: 0.0px 0.0px 15.0px 0.0px;
-        text-align: justify;
-        font: 10.5px Helvetica;
-        color: #535353;
-        background-color: #ffffff
-    }
+p.p3 {
+    margin: 0.0px 0.0px 15.0px 0.0px;
+    text-align: justify;
+    font: 10.5px Helvetica;
+    color: #535353;
+    background-color: #ffffff;
+}
 
-    p.p4 {
-        margin: 0.0px 0.0px 13.5px 0.0px;
-        font: 12.0px 'Times New Roman';
-        color: #535353;
-        background-color: #ffffff
-    }
+p.p4 {
+    margin: 0.0px 0.0px 13.5px 0.0px;
+    font: 12.0px 'Times New Roman';
+    color: #535353;
+    background-color: #ffffff;
+}
 
-    span.s1 {
-        text-decoration: underline;
-        color: #0000ff
-    }
+span.s1 {
+    text-decoration: underline;
+    color: #0000ff;
+}
 
-    span.s2 {
-        font: 12.0px Arial
-    }
-</style>
+span.s2 {
+    font: 12.0px Arial;
+}</style>
                 <p class="p1"><span style="font-size: 16px;">Please read these Disclaimers (hereinafter referred to as &quot;Terms&quot;) carefully. Please refer to the official Website for more information (hereinafter referred to as &quot;FINORATOR&quot;) - <a href="https://finorator.com"><span class="s1"><strong>https://finorator.com</strong></span></a></span></p>
                 <p class="p2"><span style="font-size: 16px;">All the information on this website - https://finorator.com/ - is published in good faith and for general information purpose only. Finorator.com does not make any warranties about the completeness, reliability and accuracy of this information. By accessing this Website and / or using any information/contents provided on or via this Website, you represent that you have read and understood these Terms and you agree to be bound by and comply with the same. Furthermore, by using this Website, you represent that (i) you have the capacity to be bound by these Terms and (ii) if you are acting on behalf of any company or other person/entity, you have the authority to bind such company or person/entity. If you do not agree to these Terms, please do not use this Website or download any content, in any manner whatsoever, from<span class="s2">&nbsp;the same.</span> Any action you take upon the information you find on this website (finorator.com), is strictly at your own risk. Finorator.com will not be liable for any losses and/or damages in connection with the use of our website.</span></p>
                 <p class="p3"><span style="font-size: 16px;">Neither FINORATOR nor any of its affiliates, their directors, employees and agents accept any responsibility and/or liability or warrant or guarantee the performance or profitability of the Products/Services nor do they warrant or guarantee the returns and that the product purchase objectives of the Products/Services shall be achieved at any time and in any manner whatsoever. We make no representations and/or warranties and/or guarantees, express or implied, regarding the accuracy, completeness or reliability of any information/contents, Software, Features, Products/Services provided in this Website. Without limiting any of the foregoing,&nbsp;FINORATOR, its affiliates, associates, their directors, employees and agents expressly disclaim any and all liability or responsibility, in any manner whatsoever, for any damages or expenses/costs/losses (including litigation expenses) incurred by the Investors or any other person/entity, arising out of or related to the information/contents of this Website or its Software and/or for any damages that may be caused to any equipment / hardware and/or other software or components thereof, due to any viruses, defects or malfunctions in connection with access or use of this Website and/or any information/contents transmitted via this Website and/or the functioning/non-availability of this Website or any part thereof, at any time and in any manner whatsoever and/or any action or decision made by the Investors in reliance on the Website and/or its information/contents, Software, Features and/or any unauthorized use or your inability to use or reproduction of the Website in any manner whatsoever or any of its information/contents and/or the Terms of Offer or any investments in the Products/Services, including any and all direct, special, punitive, indirect, notional or consequential damages (including lost profits) arising from or in connection with the above, even if notified of the possibility of such damages.</span></p>
