--- a/index.html
+++ b/index.html
@@ -28,25 +28,25 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Solutions</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item test">Product List<span class="caret"></span></a>
+                            <a class="dropdown-item test">Product<span class="caret"></span></a>
                             <ul class="dropdown-menu dropdown-submenu">
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Shares & Stocks</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Shares & Stocks</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Mutual Fund</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Mutual Fund</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Insurance</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Insurance</a>
                                 </li>
                                 <li>
                                     <a tabindex="-1" href="#segment" class="dropdown-item">Loans</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Income Tax</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Income Tax</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Real Estate</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Real Estate</a>
                                 </li>
                             </ul>                             
                             <a class="dropdown-item test" href="#">Other Services <span class="caret"></span></a>
@@ -106,78 +106,77 @@ under <span class="text-black-50">One Roof</span></h1>
                 </div>
             </div>
         </div>
-        <div class="segments section-body" id="segment">
+        <div class="segments section-body" id="segment" style="padding-bottom: 3em;">
             <div class="theme-head text-center">Choose your Segment</div>
             <div>
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="false">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="row car-row">
-                                <div class="col-lg-2 col-12 col-sm-6 col-xl-2">
+                                <div class="col-lg-2 col-12 col-sm-6 col-xl-3">
                                     <div class="segment-card">
                                         <div class="card-holder">
                                             <img src="assets/stocks.svg">
+                                            <div class="card-title">Shares & Stocks
+                                                <p class="theme-p">
+    Coming Soon ! </p>
+                                            </div>
                                         </div>
-                                        <div class="card-title">Shares & Stocks
+                                    </div>
+                                </div>
+                                <div class="col-lg-2 col-12 col-sm-6 col-xl-3">
+                                    <div class="segment-card">
+                                        <div class="card-holder">
+                                            <img src="assets/mutual-fund.svg">
+                                            <div class="card-title">Mutual Funds</div>
                                             <p class="theme-p">
     Coming Soon ! </p>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-2 col-12 col-sm-6 col-xl-2">
-                                    <div class="segment-card">
-                                        <div class="card-holder">
-                                            <img src="assets/mutual-fund.svg">
-                                        </div>
-                                        <div class="card-title">Mutual Funds</div>
-                                        <p class="theme-p">
-    Coming Soon ! </p>
-                                    </div>
-                                </div>
-                                <div class="col-lg-2 col-12 col-sm-6 col-xl-2">
+                                <div class="col-lg-2 col-12 col-sm-6 col-xl-3">
                                     <a href="https://www.gibl.in/?source=1000051793"><div class="segment-card">
                                             <div class="card-holder">
                                                 <img src="assets/insurance.svg">
+                                                <div class="card-title">Insurance</div>
+                                                <p class="theme-p theme-color"><a href="https://www.gibl.in/?source=1000051793">Live Now !</a></p>
                                             </div>
-                                            <div class="card-title">Insurance</div>
-                                            <p class="theme-p theme-color"><a href="https://www.gibl.in/?source=1000051793">Live Now !</a></p>
                                         </div></a>
-                                </div>
-                                <div class="col-xl-2 col-lg-2 col-12 col-sm-6">
-                                    <div class="segment-card">
-                                        <div class="card-holder">
-                                            <img src="assets/Loans.svg">
-                                        </div>
-                                        <div class="card-title">Loans</div>
-                                        <p class="theme-p">
-    Coming Soon ! </p>
-                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="row car-row">
-                                <div class="col-xl-2 col-lg-2 col-12 col-sm-6">
+                                <div class="col-lg-2 col-12 col-sm-6 col-xl-3">
+                                    <div class="segment-card">
+                                        <div class="card-holder">
+                                            <img src="assets/Loans.svg">
+                                            <div class="card-title">Loans</div>
+                                            <p class="theme-p">
+    Coming Soon ! </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-2 col-12 col-sm-6 col-xl-3">
                                     <div class="segment-card">
                                         <div class="card-holder">
                                             <img src="assets/income-tax.svg">
-                                        </div>
-                                        <div class="card-title">Income tax</div>
-                                        <p class="theme-p">
+                                            <div class="card-title">Income tax</div>
+                                            <p class="theme-p">
     Coming Soon ! </p>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="col-xl-2 col-lg-2 col-12 col-sm-6">
+                                <div class="col-lg-2 col-12 col-sm-6 col-xl-3">
                                     <div class="segment-card">
                                         <div class="card-holder">
                                             <img src="assets/real-estate.svg">
-                                        </div>
-                                        <div class="card-title">Real Estate</div>
-                                        <p class="theme-p">
+                                            <div class="card-title">Real Estate</div>
+                                            <p class="theme-p">
     Coming Soon ! </p>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="col-xl-2"></div>
                             </div>
                         </div>
                     </div>
