--- a/partner.html
+++ b/partner.html
@@ -28,25 +28,25 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Solutions</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item test">Product List<span class="caret"></span></a>
+                            <a class="dropdown-item test">Product<span class="caret"></span></a>
                             <ul class="dropdown-menu dropdown-submenu">
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Shares & Stocks</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Shares & Stocks</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Mutual Fund</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Mutual Fund</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Insurance</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Insurance</a>
                                 </li>
                                 <li>
                                     <a tabindex="-1" href="#segment" class="dropdown-item">Loans</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Income Tax</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Income Tax</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Real Estate</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Real Estate</a>
                                 </li>
                             </ul>                             
                             <a class="dropdown-item test" href="#">Other Services <span class="caret"></span></a>
