--- a/terms-and-condition.html
+++ b/terms-and-condition.html
@@ -28,25 +28,25 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Solutions</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item test">Product List<span class="caret"></span></a>
+                            <a class="dropdown-item test">Product<span class="caret"></span></a>
                             <ul class="dropdown-menu dropdown-submenu">
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Shares & Stocks</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Shares & Stocks</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Mutual Fund</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Mutual Fund</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Insurance</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Insurance</a>
                                 </li>
                                 <li>
                                     <a tabindex="-1" href="#segment" class="dropdown-item">Loans</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Income Tax</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Income Tax</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Real Estate</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Real Estate</a>
                                 </li>
                             </ul>                             
                             <a class="dropdown-item test" href="#">Other Services <span class="caret"></span></a>
@@ -105,59 +105,57 @@
         </div>
         <div class="section-body">
             <div class="container">
-                <style type="text/css">
-    p.p1 {
-        margin: 0.0px 0.0px 13.5px 0.0px;
-        text-align: center;
-        font: 27.0px Helvetica;
-        color: #3f6caf;
-        background-color: #ffffff
-    }
+                <style type="text/css">p.p1 {
+    margin: 0.0px 0.0px 13.5px 0.0px;
+    text-align: center;
+    font: 27.0px Helvetica;
+    color: #3f6caf;
+    background-color: #ffffff;
+}
 
-    p.p2 {
-        margin: 0.0px 0.0px 15.0px 0.0px;
-        font: 10.5px Helvetica;
-        color: #535353;
-        background-color: #ffffff;
-        min-height: 12.0px
-    }
+p.p2 {
+    margin: 0.0px 0.0px 15.0px 0.0px;
+    font: 10.5px Helvetica;
+    color: #535353;
+    background-color: #ffffff;
+    min-height: 12.0px;
+}
 
-    p.p3 {
-        margin: 0.0px 0.0px 15.0px 0.0px;
-        font: 10.5px Helvetica;
-        color: #535353;
-        background-color: #ffffff
-    }
+p.p3 {
+    margin: 0.0px 0.0px 15.0px 0.0px;
+    font: 10.5px Helvetica;
+    color: #535353;
+    background-color: #ffffff;
+}
 
-    p.p4 {
-        margin: 0.0px 0.0px 13.5px 0.0px;
-        font: 10.5px 'Times New Roman';
-        color: #535353;
-        background-color: #ffffff
-    }
+p.p4 {
+    margin: 0.0px 0.0px 13.5px 0.0px;
+    font: 10.5px 'Times New Roman';
+    color: #535353;
+    background-color: #ffffff;
+}
 
-    li.li5 {
-        margin: 0.0px 0.0px 5.0px 0.0px;
-        font: 10.5px Helvetica;
-        color: #535353
-    }
+li.li5 {
+    margin: 0.0px 0.0px 5.0px 0.0px;
+    font: 10.5px Helvetica;
+    color: #535353;
+}
 
-    span.s1 {
-        text-decoration: underline
-    }
+span.s1 {
+    text-decoration: underline;
+}
 
-    span.s2 {
-        font: 10.0px Symbol
-    }
+span.s2 {
+    font: 10.0px Symbol;
+}
 
-    span.s3 {
-        background-color: #ffffff
-    }
+span.s3 {
+    background-color: #ffffff;
+}
 
-    ul.ul1 {
-        list-style-type: disc
-    }
-</style>
+ul.ul1 {
+    list-style-type: disc;
+}</style>
                 <p class="p3"><span style="font-size: 16px; font-family: Arial, Helvetica, sans-serif;">Welcome to finorator.com!</span></p>
                 <p class="p3"><span style="font-family: Arial, Helvetica, sans-serif;"><span style="font-size: 16px;">These terms and conditions outline the rules and regulations for the use of one stop global financial services&apos;s Website, located at https://finorator.com/.</span></span></p>
                 <p class="p3"><span style="font-family: Arial, Helvetica, sans-serif;"><span style="font-size: 16px;">By accessing this website we assume you accept these terms and conditions. Do not continue to use finorator.com if you do not agree to take all of the terms and conditions stated on this page.</span></span></p>
